--- a/less/base.less
+++ b/less/base.less
@@ -5,7 +5,6 @@ html, body {
 }
 body {
     color: @tx-col;
-    text-align: center;
 
     box-shadow: inset 0 0 100px rgba(0,0,0,0.5);
 }
@@ -42,6 +41,8 @@ body {
 }
 
 .main-content {
+    width: 600px;
+    margin-left: 100px;
     margin-top: 25%;
 }
 
