Made lots of changes: added social links, completely restructured, added bg img

--- a/less/styles.less
+++ b/less/styles.less
@@ -2,8 +2,11 @@
 
 // Libraries
 @import "../lib/bootstrap/less/bootstrap.less";
+@import "../lib/fontawesome/less/font-awesome.less";
 
 // Our own stuff
 @import "vars.less";
 @import "base.less";
+@import "typography.less";
 @import "animations.less";
+@import "pages.less";
