--- a/less/animations.less
+++ b/less/animations.less
@@ -19,3 +19,32 @@
     transition-timing-function: ease;
     transition-property: background-color, color, border-color;
 }
+
+.pulsate {
+    animation-duration: 1.5s;
+    animation-name: pulsate;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease;
+}
+
+@keyframes pulsate {
+    from {
+        margin: 0;
+        width: 100px;
+        height: 100px;
+        transform: rotate(0deg);
+    }
+    50% {
+        margin-left: -5px;
+        margin-top: -5px;
+        width: 190px;
+        height: 190px;
+        transform: rotate(360deg);
+    }
+    to {
+        margin: 0;
+        width: 100px;
+        height: 100px;
+        transform: rotate(0deg);
+    }
+}
