--- a/less/base.less
+++ b/less/base.less
@@ -5,45 +5,60 @@ html, body {
 }
 body {
     color: @tx-col;
+}
 
-    box-shadow: inset 0 0 100px rgba(0,0,0,0.5);
+.avatar {
+    border-radius: 50%;
+    border: 2px solid white;
 }
 
 .wrapper {
+    background-size: cover;
     display: table;
-    width: 100%;
     height: 100%;
-    min-height: 100%;
+    width: 100%;
+    box-shadow: inset 0 0 100px rgba(0,0,0,0.5);
+}
 
-    .wrapper-inner {
-        display: table-cell;
-        vertical-align: top;
+.social {
+    ul {
+        list-style-type: none;
+        
+        li { 
+            float: left;
+            margin: 0 1em;
+
+            &:first-child {
+                margin-left: 0;
+            }
+            &:last-child {
+                margin-right: 0;
+            }
+
+            a {
+                color: white;
+                transition: color 0.25s ease;
+            }
+        }
+
+        li.linkedin:hover a {
+            color: @col-linkedin;
+        }
+        li.github:hover a {
+            color: @col-github;
+        }
+        li.twitter:hover a {
+            color: @col-twitter;
+        }
+        li.email:hover a {
+            color: @col-email;
+        }
     }
 }
 
-.page-container {
-    margin: 0 auto;
-
-    h1 {
-        text-shadow: 0 1px 3px rgba(0,0,0,0.5);
-        display: inline;
-    }
+footer {
+    text-align: center;
+    position: fixed;
+    bottom: 10px;
+    width: 100%;
 }
-
-#avatar {
-    margin: -75px 25px 0;
-    border-radius: 50%;
-    border: thick white solid;
-}
-
-.masthead {
-
-}
-
-.main-content {
-    width: 600px;
-    margin-left: 100px;
-    margin-top: 25%;
-}
-
-.mastfoot {}
