Only need a few things from bootstrap, so let's not include more than we need.

--- a/less/styles.less
+++ b/less/styles.less
@@ -1,7 +1,11 @@
 /* LESS entry point */
 
 // Libraries
-@import "../lib/bootstrap/less/bootstrap.less";
+// Only need a few things from bootstrap
+@import "../lib/bootstrap/less/variables.less";
+@import "../lib/bootstrap/less/mixins.less";
+@import "../lib/bootstrap/less/normalize.less";
+@import "../lib/bootstrap/less/type.less";
 @import "../lib/fontawesome/less/font-awesome.less";
 
 // Our own stuff
