--- a/less/base.less
+++ b/less/base.less
@@ -1,10 +1,26 @@
 /* basic less */
+* {
+    box-sizing: border-box;
+}
 html, body {
     background: @bg-col;
     height: 100%;
 }
 body {
     color: @tx-col;
+    margin: 0;
+    padding: 0;
+}
+
+.clearfix {
+    &:before,
+    &:after {
+      content: " ";
+      display: table;
+    }
+    &:after {
+      clear: both;
+    }
 }
 
 .avatar {
