--- a/less/base.less
+++ b/less/base.less
@@ -37,8 +37,11 @@ body {
 }
 
 .social {
+    padding: 0;
     ul {
         list-style-type: none;
+        padding: 0;
+        margin: 0;
         
         li { 
             float: left;
