Consolidated some styles to generalise

--- a/less/typography.less
+++ b/less/typography.less
@@ -5,3 +5,13 @@
 h1,h2,h3 {
     font-family: 'Lily Script One', sans-serif;
 }
+
+h1 {
+    font-size: 5em;
+}
+
+@media(max-width: 640px) {
+    h1 {
+        font-size: 3em;
+    }
+}
