--- a/less/base.less
+++ b/less/base.less
@@ -21,3 +21,16 @@ ul {
         opacity: 1;
     }
 }
+
+#header {
+    position: relative;
+    
+    canvas {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        left: 0;
+        top: 0;
+        z-index: 1;
+    }
+}
