--- a/less/styles.less
+++ b/less/styles.less
@@ -1,5 +1,8 @@
 @import (inline) "../lib/responsive/build/responsive.css";
 
+@import "variables";
 @import "base";
 @import "typography";
+
 @import "index";
+@import "podcasts";
