New fonts + styling for podcasts.html

--- a/less/podcasts.less
+++ b/less/podcasts.less
@@ -1,4 +1,6 @@
 .page-podcasts {
+    background: @grey-light;
+
     header {
         margin: 0;
         padding: 0.2em;
@@ -14,5 +16,70 @@
             margin: 0;
             font-size: 4em;
         }
+    }
+}
+
+.podcasts-list {
+    margin-top: 2em;
+}
+
+.podcast {
+    background: @grey-light;
+    border-bottom: thin solid darken(@grey-light, 5%);
+    padding: 1em 0;
+
+    &:last-child {
+        border-bottom: none;
+    }
+
+    .podcast__inner {
+        transition: background 0.25s linear;
+    }
+
+    &:nth-child(2n) .podcast__inner {
+        background: darken(@grey-light, 5%);
+    }
+
+    &:hover .podcast__inner {
+        background: darken(@grey-light, 10%);
+    }
+}
+
+.podcast__meta {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+
+    li {
+        display: block;
+        padding: 0.2em;
+        text-align: center;
+        width: 100%;
+        color: white;
+
+        a {
+            color: white;
+            text-decoration: none;
+            font-weight: bold;
+        }
+    }
+}
+
+.podcast__title {
+    margin: 0;
+}
+
+.podcast__meta__category {
+    background: @purple-dark;
+}
+.podcast__meta__updated {
+    background: @mauve-dark;
+}
+.podcast__meta__link {
+    background: @rose-mid;
+    transition: background 0.25s linear;
+
+    &:hover {
+        background: darken(@rose-mid, 10%);
     }
 }
