--- a/less/typography.less
+++ b/less/typography.less
@@ -1,13 +1,25 @@
+body {
+    font-family: 'Lato', sans-serif;
+}
+
 .centre {
     text-align: center;
 }
 
-h1,h2,h3 {
+h1 {
     font-family: 'Lily Script One', sans-serif;
+    font-size: 5em;
 }
 
-h1 {
-    font-size: 5em;
+h2,h3 {
+    font-weight: 300;
+}
+
+h2 {
+    font-size: 1.6em;
+}
+h3 {
+    font-size: 1.3em;
 }
 
 @media(max-width: 640px) {
