Fixe body positioning

--- a/public/assets/less/hello.less
+++ b/public/assets/less/hello.less
@@ -1,16 +1,19 @@
 .page-hello {
     background: #313a4d;
     color: white;
+    position: absolute;
 
     .intro {
-        position: relative;
+        position: absolute;
         z-index: 2;
         top: 25%;
+        left: 0;
+        right: 0;
     }
 
     footer {
         position: absolute;
-        bottom: 10px;
+        bottom: 2em;
         z-index: 2;
         max-width: 100%;
         width: 100%;
